--- a/css/tachyons.css
+++ b/css/tachyons.css
@@ -8140,3 +8140,15 @@ img {
     vertical-align: bottom;
   }
 }
+
+/* custom styles */
+
+.Site {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.Site-content {
+  flex: 1;
+}
