--- a/css/tachyons.css
+++ b/css/tachyons.css
@@ -8003,6 +8003,12 @@ img {
 
 */
 
+@media screen and (max-device-width: 800px) {
+  .main-full {
+    width: 100% !important;
+  }
+}
+
 /*
    VERTICAL ALIGN
 */
