--- a/css/tachyons.css
+++ b/css/tachyons.css
@@ -1360,19 +1360,22 @@ input[type="password"]:after,
   letter-spacing: .15em;
   text-decoration: none;
   text-transform: uppercase;
-  transition: color .4s, background-color .4s, border .4s;
+  -webkit-transition: color .4s, background-color .4s, border .4s;
+          transition: color .4s, background-color .4s, border .4s;
 }
 
 .btn:hover {
   color: #7FDBFF;
   border: 1px solid #7FDBFF;
-  transition: background-color .3s, color .3s, border .3s;
+  -webkit-transition: background-color .3s, color .3s, border .3s;
+          transition: background-color .3s, color .3s, border .3s;
 }
 
 .btn:active {
   color: #0074D9;
   border: 1px solid #0074D9;
-  transition: background-color .3s, color .3s, border .3s;
+  -webkit-transition: background-color .3s, color .3s, border .3s;
+          transition: background-color .3s, color .3s, border .3s;
 }
 
 /*
@@ -1553,15 +1556,18 @@ input[type="password"]:after,
   color: #444;
   border: 4px solid #f1f1f1;
   padding: .5rem;
-  transition: padding .4s ease-out;
-  transition-delay: .1s;
+  -webkit-transition: padding .4s ease-out;
+          transition: padding .4s ease-out;
+  -webkit-transition-delay: .1s;
+          transition-delay: .1s;
 }
 
 .btn--animated:hover {
   background: #f9f9f9;
   border: 4px solid #f1f1f1;
   padding: .75rem;
-  transition: padding .2s ease-in;
+  -webkit-transition: padding .2s ease-in;
+          transition: padding .2s ease-in;
 }
 
 /* Keep it mobile-first and responsive */
@@ -2609,28 +2615,33 @@ img {
 
 .link {
   text-decoration: none;
-  transition: color .15s ease-in;
+  -webkit-transition: color .15s ease-in;
+          transition: color .15s ease-in;
 }
 
 .link:link,
 .link:visited {
   color: #2D243B;
-  transition: color .15s ease-in;
+  -webkit-transition: color .15s ease-in;
+          transition: color .15s ease-in;
 }
 
 .link:hover {
   color: #999999;
-  transition: color .15s ease-in;
+  -webkit-transition: color .15s ease-in;
+          transition: color .15s ease-in;
 }
 
 .link:active {
   color: #C4E3E0;
-  transition: color .15s ease-in;
+  -webkit-transition: color .15s ease-in;
+          transition: color .15s ease-in;
 }
 
 .link:focus {
   color: #2D243B;
-  transition: color .15s ease-in;
+  -webkit-transition: color .15s ease-in;
+          transition: color .15s ease-in;
 }
 
 .underline {
@@ -5189,18 +5200,21 @@ img {
 
 .dim {
   opacity: 1;
-  transition: opacity .15s ease-in;
+  -webkit-transition: opacity .15s ease-in;
+          transition: opacity .15s ease-in;
 }
 
 .dim:hover {
   opacity: .6;
-  transition: opacity .15s ease-in;
+  -webkit-transition: opacity .15s ease-in;
+          transition: opacity .15s ease-in;
 }
 
 .dim:active,
 .dim:focus {
   opacity: .8;
-  transition: opacity .15s ease-out;
+  -webkit-transition: opacity .15s ease-out;
+          transition: opacity .15s ease-out;
 }
 
 /* SVG Fills */
